# dnd-session-analyzer

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
scripts/: init_db.py  test_pipeline.py  test_with_flac.py
src/: config.py
src/bot/: main.py
src/bot/cogs/: recording.py
src/database/: connection.py  models.py
src/processing/: celery_app.py  tasks.py
src/recorder/: session_recorder.py
src/services/: assemblyai_service.py  claude_service.py  dnd_vocabulary.py
