[project]
name = "dnd-recorder-bot"
version = "0.1.0"
description = "Discord bot for recording and summarizing D&D sessions"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "py-cord>=2.6.0",
    "PyNaCl>=1.5.0",
    "pydub>=0.25.1",
    "celery>=5.3.0",
    "redis>=5.0.0",
    "assemblyai>=0.26.0",
    "anthropic>=0.40.0",
    "sqlalchemy>=2.0.0",
    "asyncpg>=0.29.0",
    "psycopg2-binary>=2.9.0",
    "alembic>=1.13.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.2.0",
    "python-dotenv>=1.0.0",
    "structlog>=24.1.0",
    "tenacity>=8.2.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "black>=24.1.0",
    "ruff>=0.2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.black]
line-length = 100
target-version = ["py311"]
